<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.GmsCoreCronetProvider</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessbility_suggestion_dropdown_closed">No suggestions available</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="account_cache_provider">Account Cache Provider</string>
    <string name="account_category">Account</string>
    <string name="account_changed_by_admin_notification_text">Your IT admin made changes to your work account</string>
    <string name="account_changed_by_admin_notification_title">Work account changed</string>
    <string name="account_disambig_type_corp_subtitle">Your work email address</string>
    <string name="account_disambig_type_exchange_title">Exchange</string>
    <string name="account_disambig_type_google_subtitle">Gmail or Google Apps</string>
    <string name="account_disambig_type_google_title">Google</string>
    <string name="account_disambig_type_personal_subtitle">Yahoo, Outlook.com, etc.</string>
    <string name="account_disambig_type_personal_title">Personal (IMAP/POP)</string>
    <string name="account_duplicate_dlg_message_fmt">"You're already using this username for the account \"%s\"."</string>
    <string name="account_duplicate_dlg_title">Duplicate account</string>
    <string name="account_item_default">Switch account</string>
    <string name="account_management_account_is_not_ready_line_item">"This account can't be set up yet"</string>
    <string name="account_management_account_is_not_ready_title">"New account isn't ready"</string>
    <string name="account_management_account_removed_line_item">This account was removed</string>
    <string name="account_management_account_removed_title">Work account removed</string>
    <string name="account_management_activity">com.google.android.gm.autoactivation.AccountManagementActivity</string>
    <string name="account_management_config_updated_description">Your IT admin made changes that affect your work account.</string>
    <string name="account_management_contact_admin">Contact your IT admin for help</string>
    <string name="account_management_need_to_set_up_new_work_account">Your new work account needs to be set up.</string>
    <string name="account_management_new_work_account_line_item">Set up this account</string>
    <string name="account_management_set_up_new_account_title">New work account</string>
    <string name="account_manager_type_exchange">com.google.android.gm.exchange</string>
    <string name="account_manager_type_legacy_imap">com.google.android.gm.legacyimap</string>
    <string name="account_manager_type_pop3">com.google.android.gm.pop3</string>
    <string name="account_notification_level_all">All</string>
    <string name="account_notification_level_high_priority">High priority only</string>
    <string name="account_notification_level_none">None</string>
    <string name="account_removal_progress_label">Removing account...</string>
    <string name="account_security_dialog_content_fmt">In order to use your account &lt;%s> you must update the security settings on your device. Contact your administrator for more information.</string>
    <string name="account_security_dialog_ok">Update now</string>
    <string name="account_security_policy_explanation_fmt">The server %s requires that you allow it to remotely control some security features of your Android device.</string>
    <string name="account_security_title">Device security</string>
    <string name="account_settings_action">Account settings</string>
    <string name="account_settings_background_attachments_label">Download attachments</string>
    <string name="account_settings_background_attachments_summary">Auto-download attachments to recent messages via Wi-Fi</string>
    <string name="account_settings_conversation_view_cancel_dialog_message">This seems to be taking longer than expected. Would you like to continue?</string>
    <string name="account_settings_conversation_view_no_connection">This action requires an internet connection.</string>
    <string name="account_settings_conversation_view_progress_dialog_message">Updating account settings…</string>
    <string name="account_settings_conversation_view_summary">Group emails with the same topic together. This setting may take some time to apply</string>
    <string name="account_settings_conversation_view_title">Conversation view</string>
    <string name="account_settings_conversation_view_turned_off_dialog_message">Conversation view has been turned off to match your account settings. You can change this in settings.</string>
    <string name="account_settings_conversation_view_turned_on_dialog_message">Conversation view has been turned on to match your account settings. You can change this in settings.</string>
    <string name="account_settings_data_usage">Data usage</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_enforced_label">Policies enforced</string>
    <string name="account_settings_enforced_summary">None</string>
    <string name="account_settings_exit_server_settings">Discard unsaved changes?</string>
    <string name="account_settings_inbox_tips">Inbox Tips</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_incoming_summary">Username, password, and other incoming server settings</string>
    <string name="account_settings_mail_check_frequency_label">Sync frequency</string>
    <string name="account_settings_manage_notifications_label">Manage notifications</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Send notification when email arrives</string>
    <string name="account_settings_nudges">Nudges</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_outgoing_summary">Username, password, and other outgoing server settings</string>
    <string name="account_settings_policies">Security policies</string>
    <string name="account_settings_retry_label">Attempt sync</string>
    <string name="account_settings_retry_summary">Tap here to sync this account</string>
    <string name="account_settings_ringtone">Choose ringtone</string>
    <string name="account_settings_security">Security</string>
    <string name="account_settings_security_s4_key" />
    <string name="account_settings_security_s4_label" />
    <string name="account_settings_servers">Server settings</string>
    <string name="account_settings_summary">Sync frequency, notifications, etc.</string>
    <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_calendar_summary">Sync calendar events for this account</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_contacts_summary">Sync contacts for this account</string>
    <string name="account_settings_sync_email_enable">Sync email</string>
    <string name="account_settings_sync_email_summary">Sync email for this account</string>
    <string name="account_settings_unsupported_label">Unsupported policies</string>
    <string name="account_settings_unsupported_summary">None</string>
    <string name="account_setup_account_type_description">Choose account type</string>
    <string name="account_setup_account_type_instructions">What type of account is this?</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_exchange_certificate_title">Client certificate</string>
    <string name="account_setup_exchange_no_certificate">None</string>
    <string name="account_setup_exchange_remove_certificate">Remove</string>
    <string name="account_setup_exchange_select_certificate">Select</string>
    <string name="account_setup_incoming_delete_policy_label">Delete email from server</string>
    <string name="account_setup_incoming_headline">Incoming server settings</string>
    <string name="account_setup_incoming_imap_path_prefix_label">IMAP path prefix</string>
    <string name="account_setup_incoming_password_label">Password</string>
    <string name="account_setup_port_label">Port</string>
    <string name="account_setup_security_label">Security type</string>
    <string name="account_setup_server_label">Server</string>
    <string name="account_setup_username_label">Username</string>
    <string name="ad">Ad</string>
    <string name="ad_formfill_button_back">Back</string>
    <string name="ad_formfill_button_edit">Edit</string>
    <string name="ad_formfill_disclaimer_page_back_button_description">Go back to last page.</string>
    <string name="ad_info_description">Why this ad?</string>
    <string name="add_star">Add star</string>
    <string name="app_hint_text">You will be able to read your email through the %1$s app.</string>
    <string name="delete">Delete</string>
    <string name="density_dialog_button_text">OK</string>
    <string name="density_dialog_title_text">Choose a view</string>
    <string name="density_option_comfortable">Comfortable</string>
    <string name="density_option_compact">Compact</string>
    <string name="density_option_default">Default</string>
    <string name="eas_account_setup_basics_email_label">Email</string>
    <string name="forward">Forward</string>
    <string name="mark_unread_from_here">Mark unread from here</string>
    <string name="print">Print</string>
    <string name="remove_star">Remove star</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="resume_draft">Edit</string>
    <string name="server_account_info_division_line">Account info</string>
    <string name="server_settings_division_line">Server settings</string>
    <string name="server_settings_email_label">Email</string>
    <string name="show_html_message">Show HTML message</string>
    <string name="show_original_message">Show Original</string>
    <string name="t4_detail_mark_as_done">Mark as done</string>
    <string name="t4_detail_mark_as_not_done">Mark as not done</string>
    <string name="warm_welcome_button_text">Next</string>
    <string name="warm_welcome_text">Your favorite email has a fresh new look</string>
    <string name="warm_welcome_title_text">Welcome</string>
</resources>