<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/reply" android:orderInCategory="0" android:title="@string/reply" />
    <item android:id="@id/reply_all" android:orderInCategory="1" android:title="@string/reply_all" />
    <item android:id="@id/forward" android:orderInCategory="2" android:title="@string/forward" />
    <item android:id="@id/add_star" android:orderInCategory="3" android:title="@string/add_star" />
    <item android:id="@id/remove_star" android:orderInCategory="3" android:title="@string/remove_star" />
    <item android:id="@id/delete_and_cancel_scheduled_message" android:orderInCategory="4" android:title="" />
    <item android:id="@id/print_message" android:orderInCategory="5" android:title="@string/print" />
    <item android:id="@id/show_original" android:orderInCategory="6" android:title="@string/show_original_message" />
    <item android:id="@id/show_html_message" android:orderInCategory="7" android:title="@string/show_html_message" />
    <item android:id="@id/mark_unread_from_here" android:orderInCategory="8" android:title="@string/mark_unread_from_here" />
    <item android:id="@id/block_sender" android:orderInCategory="9" />
    <item android:id="@id/unblock_sender" android:orderInCategory="9" />
</menu>