<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/quantum_gm_ic_done_vd_theme_24" android:id="@id/done" android:title="@string/t4_detail_mark_as_done" app:showAsAction="always" />
    <item android:icon="@drawable/quantum_gm_ic_done_vd_theme_24" android:id="@id/t4_detail_menu_mark_as_not_done" android:title="@string/t4_detail_mark_as_not_done" app:showAsAction="always" />
    <item android:icon="@drawable/quantum_gm_ic_delete_vd_theme_24" android:id="@id/delete" android:title="@string/delete" app:showAsAction="always" />
    <item android:icon="@drawable/quantum_gm_ic_edit_vd_theme_24" android:id="@id/edit" android:title="@string/resume_draft" app:showAsAction="always" />
</menu>