<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EasAccountSetupFormContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_email_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/eas_account_setup_basics_email_label" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" style="@style/AccountSetupTextInputEditText" />
    </android.support.design.textfield.TextInputLayout>
    <TextView android:id="@id/manual_setup" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_setup_basics_manual_setup_action" style="@style/AccountSetupText.Action" />
    <TextView android:id="@id/app_hint" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_hint_text" style="@style/AccountSetupText.Info" />
</LinearLayout>