<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/ad_formfill_disclaimer_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/ad_formfill_disclaimer_view_min_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ad_formfill_disclaimers" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <android.support.design.button.MaterialButton android:id="@id/ad_formfill_disclaimer_view_back_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ad_formfill_button_back" android:layout_below="@id/ad_formfill_disclaimers" android:contentDescription="@string/ad_formfill_disclaimer_page_back_button_description" style="@style/AdFormfillBackButton" />
    <android.support.design.button.MaterialButton android:id="@id/ad_formfill_edit_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ad_formfill_button_edit" android:layout_below="@id/ad_formfill_disclaimers" style="@style/AdFormfillEditButton" />
    <android.support.design.button.MaterialButton android:id="@id/ad_formfill_submit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AdFormfillSubmitButton" />
</RelativeLayout>