<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/AccountSetupFormContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/setup_title_bottom_padding" android:text="@string/account_setup_incoming_headline" style="@style/AccountSetupText.SettingsHeadline" />
    <include layout="@layout/error_text_view" />
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_username_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_username_label" style="@style/SudGmailTextInputLayoutBottomMargin">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <com.android.email.activity.setup.AuthenticationView android:id="@id/authentication_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <include android:id="@id/client_certificate_selector" android:visibility="gone" layout="@layout/client_certificate_selector" />
    <include layout="@layout/device_details" />
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_server_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_server_label" style="@style/SudGmailTextInputLayoutBottomMargin">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_server" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textUri" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_port_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_port_label" style="@style/SudGmailTextInputLayoutBottomMargin">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <TextView android:id="@id/account_setup_security_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_security_label" style="@style/AccountSetupText.Label" />
    <Spinner android:id="@id/account_security_type" android:paddingBottom="@dimen/setup_spinner_padding_bottom_with_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/setup_spinner_margin_bottom_with_message" android:contentDescription="@string/account_setup_security_label" style="@style/AccountSetupText.Spinner" />
    <TextView android:id="@id/account_security_type_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AccountSetupText.Label.SpinnerWarning" />
    <TextView android:id="@id/account_delete_policy_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_incoming_delete_policy_label" style="@style/AccountSetupText.Label" />
    <Spinner android:id="@id/account_delete_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/account_setup_incoming_delete_policy_label" style="@style/AccountSetupText.Spinner" />
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/imap_path_prefix_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_incoming_imap_path_prefix_label" style="@style/SudGmailTextInputLayoutBottomMargin">
        <android.support.design.textfield.TextInputEditText android:id="@id/imap_path_prefix" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" style="@style/AccountSetupTextInputEditText" />
    </android.support.design.textfield.TextInputLayout>
</LinearLayout>