<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/EasAccountSetupFormContainer"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/eas_error_text_view" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/account_setup_settings_division_section_margin">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_account_info_division_line" style="@style/SettingsDivisionLabel" />
        <include layout="@layout/eas_division_line" />
    </LinearLayout>
    <android.support.design.textfield.TextInputLayout android:id="@id/account_email_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/server_settings_email_label" android:inputType="textEmailAddress" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <android.support.design.textfield.TextInputLayout android:id="@id/password_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="true" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_incoming_password_label" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/AccountSetupTextInputEditText.Password" />
    </android.support.design.textfield.TextInputLayout>
    <include android:id="@id/client_certificate_selector" android:visibility="gone" layout="@layout/eas_client_certificate_selector" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/account_setup_settings_division_section_margin" android:layout_marginBottom="@dimen/account_setup_settings_division_section_margin">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_settings_division_line" style="@style/SettingsDivisionLabel" />
        <include layout="@layout/eas_division_line" />
    </LinearLayout>
    <android.support.design.textfield.TextInputLayout android:id="@id/account_username_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_username_label" android:inputType="textEmailAddress" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_server_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_server_label" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_server" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textUri" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <android.support.design.textfield.TextInputLayout android:theme="@style/Theme.GoogleMaterial.Light.Bridge.TextField" android:id="@id/account_port_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_setup_port_label" style="@style/EasSudGmailTextInputLayout">
        <android.support.design.textfield.TextInputEditText android:id="@id/account_port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number" style="@style/AccountSetupTextInputEditText.Disableable" />
    </android.support.design.textfield.TextInputLayout>
    <TextView android:id="@id/account_setup_security_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_setup_security_label" style="@style/AccountSetupText.Label" />
    <Spinner android:id="@id/account_security_type" android:paddingBottom="@dimen/setup_spinner_padding_bottom_with_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/setup_spinner_margin_bottom_with_message" android:contentDescription="@string/account_setup_security_label" style="@style/AccountSetupText.Spinner" />
    <TextView android:id="@id/account_security_type_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AccountSetupText.Label.SpinnerWarning" />
    <TextView android:id="@id/account_device_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/account_setup_default_vertical_spacing" style="@style/AccountSetupTextLabel" />
</LinearLayout>